--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v7" media="all">
+	<link rel="stylesheet" href="css/style.css?v8" media="all">
 </head>
 <body>
 	<div class="page-wrapper">
@@ -113,17 +113,23 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="#investment-popup" data-fancybox class="button white block big" onClick="_gaq.push(['_trackEvent', 'Knopka1', 'PrivateSale']);">개인적 판매에 참여하다</a>
+								<a  href="#investment-popup" data-fancybox class="button white block big">
+									<button id="readyButton" type="submit" class="default_green_button checkout_last" data-locked="0" onClick="_gaq.push(['_trackEvent', 'Knopka1', 'PrivateSale']);">개인적 판매에 참여하다</button>
+								</a>
 							</div>
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_k.pdf" title="" target="_blank" class="button white block" onClick="_gaq.push(['_trackEvent', 'Knopka2', 'WhitePaper']);">백지</a>
+								<a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_e.pdf" title="" target="_blank" class="button white block">
+									<button id="readyButton" type="submit" class="default_green_button checkout_last" data-locked="0" onClick="_gaq.push(['_trackEvent', 'Knopka2', 'WhitePaper']);">백지</button>
+								</a>
 							</div>
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="https://pprotocol.org/" target="_blank" class="button white block">MVP</a>
+								<a href="https://pprotocol.org/" target="_blank" class="button white block">
+									<button id="readyButton" type="submit" class="default_green_button checkout_last" data-locked="0" onClick="_gaq.push(['_trackEvent', 'Knopka3', 'Github']);">MVP</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -467,13 +473,13 @@
 						<div class="news-list">
 							<div class="news-list-box">
 								<div class="news-list-item big">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/IjEgbEW_VxI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/IjEgbEW_VxI/maxresdefault.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI"></a>
 									</div>
 								</div>
 								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U&t=1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
 									</div>
 									<div class="blog-content">
 										<div class="blog-title">16.07.2019</div>
@@ -483,8 +489,8 @@
 									</div>
 								</div>
 								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/OXQ9ffhJLiA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/OXQ9ffhJLiA/0.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/OXQ9ffhJLiA"></a>
 									</div>
 									<div class="blog-content">
 										<div class="blog-title">16.07.2019</div>
@@ -494,48 +500,8 @@
 									</div>
 								</div>
 								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/FAi71pqh_EU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="news-list-box">
-								<div class="news-list-item big">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/wEjNV_Hu_cQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									</div>
-								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/1Xd082HFy00" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
-									</div>
-								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
-									</div>
-								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/FAi71pqh_EU/0.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/FAi71pqh_EU"></a>
 									</div>
 									<div class="blog-content">
 										<div class="blog-title">16.07.2019</div>
@@ -547,13 +513,13 @@
 							</div>
 							<div class="news-list-box">
 								<div class="news-list-item big">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/wEjNV_Hu_cQ/maxresdefault.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/wEjNV_Hu_cQ"></a>
 									</div>
 								</div>
 								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/1Xd082HFy00/0.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/1Xd082HFy00"></a>
 									</div>
 									<div class="blog-content">
 										<div class="blog-title">16.07.2019</div>
@@ -563,8 +529,8 @@
 									</div>
 								</div>
 								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
 									</div>
 									<div class="blog-content">
 										<div class="blog-title">16.07.2019</div>
@@ -574,8 +540,48 @@
 									</div>
 								</div>
 								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="news-list-box">
+								<div class="news-list-item big">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/maxresdefault.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
+										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
 									</div>
 									<div class="blog-content">
 										<div class="blog-title">16.07.2019</div>
@@ -587,35 +593,6 @@
 							</div>
 						</div>
 					</div>
-				</div>
-			</section>
-			<div class="bottom-panel last">
-				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
-			</div>
-		</div>
-		<div class="colored-bg box-wrapper our-wrapper">
-			<div class="page-scroller-wrapper">
-				<ul class="page-scroller">
-					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
-					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
-					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
-					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
-					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
-					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
-					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
-				</ul>
-			</div>
-			<div class="colored-bg-elements">
-				<div class="simple-line sl-1"></div>
-				<div class="simple-line sl-2"></div>
-				<div class="simple-line sl-3"></div>
-				<div class="simple-line sl-4"></div>
-				<div class="simple-line sl-5"></div>
-			</div>
-			<section class="box box-table our" id="our">
-				<div class="box-cell">
 					<a href="https://medium.com/@product.protocol" target="_blank" class="subbox-title">See our full blog</a>
 					<h2 class="box-title small padding">
 						FROM OUR BLOG
@@ -905,7 +882,7 @@
 	<script src="js/slick.min.js"></script>
 	<script src="js/alfaNavbar.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
-	<script src="js/scripts.js?v4"></script>
+	<script src="js/scripts.js?v5"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
