--- a/en/index.html
+++ b/en/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="../css/slick.css" media="all">
 	<link rel="stylesheet" href="../css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="../css/style.css?v8" media="all">
+	<link rel="stylesheet" href="../css/style.css?v9" media="all">
 </head>
 <body>
 	<div class="page-wrapper">
@@ -386,49 +386,49 @@
 									<div class="team-image">
 										<img src="/images/team-image-7.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/reuben-godfrey/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<a href="https://www.linkedin.com/in/reuben-godfrey/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Reuben Godfrey</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
 										<img src="/images/team-image-8.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/adnanah/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<a href="https://www.linkedin.com/in/adnanah/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Adnan Ahmed Siddiqui</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
 										<img src="/images/team-image-9.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/kilian-peter-krings-827298121/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<a href="https://www.linkedin.com/in/kilian-peter-krings-827298121/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Kilian Peter Krings</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
 										<img src="/images/team-image-10.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/deepanshubhatt/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<a href="https://www.linkedin.com/in/deepanshubhatt/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Deepanshu Bhatt</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
 										<img src="/images/team-image-11.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/vilniuscapital/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<a href="https://www.linkedin.com/in/vilniuscapital/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Anthony Johnson</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
 										<img src="/images/team-image-12.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/jonnyfianu/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<a href="https://www.linkedin.com/in/jonnyfianu/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Jonathan Fianu</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
 										<img src="/images/team-image-13.jpg" alt="">
 									</div>
-									<a href="https://www.linkedin.com/in/williambryant1/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<a href="https://www.linkedin.com/in/williambryant1/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Will Bryant</div>
 								</div>
 							</div>
