--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v10" media="all">
+	<link rel="stylesheet" href="css/style.css?v11" media="all">
 </head>
 <body>
 	<div class="page-wrapper">
@@ -471,123 +471,63 @@
 					</h2>
 					<div class="news-list-wrapper">
 						<div class="news-list">
-							<div class="news-list-box">
-								<div class="news-list-item big">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/IjEgbEW_VxI/maxresdefault.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI"></a>
-									</div>
+							<div class="news-list-item big">
+								<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/IjEgbEW_VxI/maxresdefault.jpg)">
+									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI"></a>
 								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
-									</div>
-								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/OXQ9ffhJLiA/0.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/OXQ9ffhJLiA"></a>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
-									</div>
-								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/FAi71pqh_EU/0.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/FAi71pqh_EU"></a>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
+								<div class="blog-content">
+									<div class="blog-text">
+										Product Protocol
 									</div>
 								</div>
 							</div>
-							<div class="news-list-box">
-								<div class="news-list-item big">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/wEjNV_Hu_cQ/maxresdefault.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/wEjNV_Hu_cQ"></a>
-									</div>
+							<div class="news-list-item big">
+								<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
+									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
 								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/1Xd082HFy00/0.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/1Xd082HFy00"></a>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
-									</div>
-								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
-									</div>
-								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
+								<div class="blog-content">
+									<div class="blog-text">
+										Product Protocol
 									</div>
 								</div>
 							</div>
-							<div class="news-list-box">
-								<div class="news-list-item big">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/maxresdefault.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
+							<div class="news-list-item big">
+								<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/OXQ9ffhJLiA/0.jpg)">
+									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/OXQ9ffhJLiA"></a>
+								</div>
+								<div class="blog-content">
+									<div class="blog-text">
+										Pprotocol | Blockchain version of «Alibaba» | New bitcoin
 									</div>
 								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
+							</div>
+							<div class="news-list-item big">
+								<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/FAi71pqh_EU/0.jpg)">
+									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/FAi71pqh_EU"></a>
+								</div>
+								<div class="blog-content">
+									<div class="blog-text">
+										Pprotocol | Blockchain version of «Alibaba» | Who would benefit from using the PP platfom
 									</div>
 								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
+							</div>
+							<div class="news-list-item big">
+								<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/wEjNV_Hu_cQ/maxresdefault.jpg)">
+									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/wEjNV_Hu_cQ"></a>
+								</div>
+								<div class="blog-content">
+									<div class="blog-text">
+										Pprotocol | Blockchain version of «Alibaba» | What are the problems of the current tokenization
 									</div>
 								</div>
-								<div class="news-list-item">
-									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/gjZLQCthU5U/0.jpg)">
-										<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/gjZLQCthU5U"></a>
-									</div>
-									<div class="blog-content">
-										<div class="blog-title">16.07.2019</div>
-										<div class="blog-text">
-											Business tokenization protocol
-										</div>
+							</div>
+							<div class="news-list-item big">
+								<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');" style="background-image: url(http://img.youtube.com/vi/1Xd082HFy00/0.jpg)">
+									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/1Xd082HFy00"></a>
+								</div>
+								<div class="blog-content">
+									<div class="blog-text">
+										Product protocol | Blockchain version of Alibaba | What is the product protocol platform solution
 									</div>
 								</div>
 							</div>
@@ -600,22 +540,22 @@
 					<div class="our-list-wrapper">
 						<div class="our-list">
 							<div class="our-list-item">
-								<a href="https://medium.com/@product.protocol/dear-friends-we-are-pleased-to-announce-our-meetup-may-12-in-hong-kong-a70c18c4a89" class="our-list-item-overlay">
+								<a style="background-image: url(/images/our-image-3.jpg)" href="https://medium.com/@product.protocol/dear-friends-we-are-pleased-to-announce-our-meetup-may-12-in-hong-kong-a70c18c4a89" class="our-list-item-overlay">
 									<span class="our-list-item-title">Dear friends, we are pleased to announce our meetup may 12 in Hong Kong!</span>
 								</a>
 							</div>
 							<div class="our-list-item">
-								<a href="https://medium.com/@product.protocol/new-video-what-is-the-product-protocol-platform-solution-d8048e5d8745" class="our-list-item-overlay">
+								<a style="background-image: url(/images/our-image-2.jpg)" href="https://medium.com/@product.protocol/new-video-what-is-the-product-protocol-platform-solution-d8048e5d8745" class="our-list-item-overlay">
 									<span class="our-list-item-title">What is the product protocol platform solution</span>
 								</a>
 							</div>
 							<div class="our-list-item">
-								<a href="https://medium.com/@product.protocol/interview-cmo-pp-76702d387cd1" class="our-list-item-overlay">
+								<a style="background-image: url(/images/our-image-4.jpg)" href="https://medium.com/@product.protocol/interview-cmo-pp-76702d387cd1" class="our-list-item-overlay">
 									<span class="our-list-item-title">Interview CMO PP</span>
 								</a>
 							</div>
 							<div class="our-list-item">
-								<a href="https://medium.com/@product.protocol/blockchain-version-of-alibaba-79f330e77695" class="our-list-item-overlay">
+								<a style="background-image: url(/images/our-image-1.jpg)" href="https://medium.com/@product.protocol/blockchain-version-of-alibaba-79f330e77695" class="our-list-item-overlay">
 									<span class="our-list-item-title">Blockchain version of «Alibaba»</span>
 								</a>
 							</div>
@@ -882,7 +822,7 @@
 	<script src="js/slick.min.js"></script>
 	<script src="js/alfaNavbar.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
-	<script src="js/scripts.js?v6"></script>
+	<script src="js/scripts.js?v11"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
