--- a/en/index.html
+++ b/en/index.html
@@ -488,7 +488,7 @@
 									<div class="diag diag-1"></div>
 								</div>
 								<div class="graph-text">
-									<div class="graph-text-box"><strong>30%</strong> - marketing and first tokenised products </div>
+									<div class="graph-text-box"><strong>30%</strong> - marketing and first tokenized products </div>
 									<div class="graph-text-box"><strong>35%</strong> - development and PP coin fund  </div>
 									<div class="graph-text-box"><strong>10%</strong> - legal, salary, lawyers  </div>
 									<div class="graph-text-box"><strong>10%</strong> - technology support</div>
@@ -506,7 +506,7 @@
 									<div class="diag diag-1"></div>
 								</div>
 								<div class="graph-text">
-									<div class="graph-text-box"><strong>1. 65 000 000 PPO</strong> - ICO</div>
+									<div class="graph-text-box"><strong>1. 65 000 000 PPO</strong> - IEO</div>
 									<div class="graph-text-box"><strong>2. 15 000 000 PPO</strong> - team and associates</div>
 									<div class="graph-text-box"><strong>3. 15 000 000 PPO</strong> - platform support</div>
 									<div class="graph-text-box"><strong>4. 5 000 000 PPO</strong> - marketing and advisors</div>
